<resources>
    <string name="app_name">Homework 1.3.1</string>
    <string name="systolic_input">Systolic pressure</string>
    <string name="diastolic_input">Diastolic pressure</string>
    <string name="pulse_input">Pulse</string>
    <string name="tachycardia_checkbox">Tachycardia</string>
    <string name="save_button">Save</string>
    <string name="description">Complex health monitoring system\nby Dmitrij Sigida</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="age_input">Age</string>
    <string name="type_first_name">Please type your first name</string>
    <string name="type_middle_name">Please type your middle name</string>
    <string name="type_last_name">Please type your last name</string>
    <string name="type_age">Please type your age</string>
    <string name="invalid_age">The age you specified is invalid</string>
    <string name="add_bp_record">Add BP record</string>
    <string name="add_vital_parameters_button">Add vital parameters</string>
    <string name="type_systolic">Please type your systolic pressure</string>
    <string name="type_diastolic">Please type your diastolic pressure</string>
    <string name="type_pulse">Please type your pulse</string>
    <string name="one_of_numbers_invalid">One of the numbers your typed is invalid</string>
    <string name="bp_record_added">Blood pressure record added</string>
    <string name="weight_input">Weight (kg)</string>
    <string name="steps_input">Amount of steps</string>
    <string name="vital_params_record_added">Vital parameters record added</string>
    <string name="type_weight">Please type your weight</string>
    <string name="type_steps">Please type the amount of steps</string>
</resources>
