<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="@+id/iconImageView"
        app:layout_constraintStart_toEndOf="@+id/iconImageView"
        app:layout_constraintTop_toTopOf="@+id/iconImageView" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconImageView" />

    <EditText
        android:id="@+id/middleNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/middle_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/firstNameInput"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/middleNameInput"
        app:layout_constraintTop_toBottomOf="@+id/middleNameInput" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_bp_record"
        app:layout_constraintEnd_toEndOf="@+id/ageInput"
        app:layout_constraintStart_toStartOf="@+id/ageInput"
        app:layout_constraintTop_toBottomOf="@+id/ageInput" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/age_input"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/lastNameInput"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

    <Button
        android:id="@+id/addVitalParametersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_vital_parameters_button"
        app:layout_constraintEnd_toEndOf="@+id/ageInput"
        app:layout_constraintStart_toStartOf="@+id/ageInput"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />
</androidx.constraintlayout.widget.ConstraintLayout>