<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VitalParametersInputActivity">

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/weight_input"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stepsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/steps_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/weightInput"
        app:layout_constraintStart_toStartOf="@+id/weightInput"
        app:layout_constraintTop_toBottomOf="@+id/weightInput" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save_button"
        app:layout_constraintStart_toStartOf="@+id/stepsInput"
        app:layout_constraintTop_toBottomOf="@+id/stepsInput" />
</androidx.constraintlayout.widget.ConstraintLayout>